Lorem removed and new additions added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#">Services</a>
         <a href="#" class="active">Product</a>
         <div><a href="#">Home</a></div>
+        <p class="nav">Luby</p>
     </div>
     <div class="layout">
         <div class="check">
@@ -27,7 +28,7 @@
         </div>
         <div class="position">
             <h1>Abroline Lubricant:</h1>
-            <p class="text">GHS 17.99</p>
+            <p class="text"></span>GHS <span class="discount">117.99</span> 95.20</p>
             <div class="grid-layout">
                 <div class="btn">
                     <a href="#" class="colour">Add to Cart</a>
@@ -40,16 +41,10 @@
             </div>
             <hr>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dolores soluta optio et nostrum
-                    eaque, ut veritatis harum sunt
-                    dignissimos debitis nulla maiores aperiam. Iusto at ullam
-                    7laudantium voluptates similique. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-                    dolores soluta optio et nostrum eaque, ut veritatis harum sunt
-                    dignissimos debitis nulla maiores aperiam. Iusto at ullam
-                    7laudantium voluptates similique.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-                    dolores soluta optio et nostrum eaque, ut veritatis harum sunt
-                    dignissimos debitis nulla maiores aperiam. Iusto at ullam
-                    laudantium voluptates similique.</p>
+                <h2>Product Details</h2>
+    
+                <p>Abroline lubricant is blended with soothing aloe vera. It is an intimate lube and massage gel It's gentle enough for all over body massage, as well as use in intimate areas. It's water soluble and easily washed off. It's also got no added fragrances. 
+                    Store in a cool dry place away from direct sunlight. Use within 3 months of opening.</p>
 
             </div>
         </div>
