span error fixed

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="position">
             <h1>Abroline Lubricant:</h1>
-            <p class="text"></span>GHS <span class="discount">117.99</span> 95.20</p>
+            <p class="text">GHS <span class="discount">117.99</span> 95.20</p>
             <div class="grid-layout">
                 <div class="btn">
                     <a href="#" class="colour">Add to Cart</a>
